--- a/app/src/main/res/layout/popup_admin_marker.xml
+++ b/app/src/main/res/layout/popup_admin_marker.xml
@@ -11,7 +11,7 @@
         android:id="@+id/popupMainContent"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -28,7 +28,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@drawable/admin_marker" />
+            app:srcCompat="@drawable/admin_marker"/>
 
         <ScrollView
             android:layout_width="0dp"
@@ -47,7 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="16"
-                android:shadowColor="#000000"
+                android:shadowColor="#ffffff"
                 android:shadowDx="0.0"
                 android:shadowDy="0.0"
                 android:shadowRadius="4.0"
@@ -77,11 +77,11 @@
             android:id="@+id/submissionDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
             android:text="01.01.2001"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@+id/submissionSubmitterName"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/submissionSubmitterName" />
 
 
         <TextView
@@ -91,12 +91,12 @@
             android:layout_marginStart="16dp"
             android:text="Untitled"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="@+id/guideline7"
             app:layout_constraintRight_toRightOf="parent"
             android:layout_marginEnd="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/submissionDate"
-            android:layout_marginBottom="8dp" />
+            style="@style/TextViewTitleMedium"
+            app:layout_constraintHorizontal_bias="0.0"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
 
         <TextView
             android:id="@+id/submissionSubmitterName"
@@ -127,7 +127,7 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
