--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -37,38 +37,19 @@
         android:layout_marginTop="32dp"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ProgressBar
-        android:id="@+id/progressbar1"
-        style="@android:style/Widget.ProgressBar.Horizontal"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="56dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/drawerUsername"
-        app:layout_constraintRight_toRightOf="@+id/drawerUsername"
-        android:layout_width="130dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/drawerUsername"
-        app:layout_constraintVertical_bias="0.32999998" />
 
     <TextView
         android:id="@+id/drawer_progressbar_score"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_alignLeft="@+id/progressbar1"
-        android:layout_alignRight="@+id/progressbar1"
-        android:layout_alignTop="@+id/progressbar1"
         android:gravity="center"
         android:text="8900 pts"
         android:textAlignment="center"
         android:textColor="@color/black"
-        app:layout_constraintLeft_toLeftOf="@+id/progressbar1"
-        app:layout_constraintRight_toRightOf="@+id/progressbar1"
-        app:layout_constraintTop_toTopOf="@+id/progressbar1"
-        app:layout_constraintBottom_toBottomOf="@+id/progressbar1"
-        app:layout_constraintVertical_bias="0.65999997" />
+        app:layout_constraintVertical_bias="0.65999997"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/drawerUsername"
+        app:layout_constraintLeft_toLeftOf="@+id/drawerUsername" />
 
     <android.support.constraint.Guideline
         android:id="@+id/guideline13"
@@ -76,7 +57,7 @@
         android:layout_height="136dp"
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.3828125"
-        tools:layout_editor_absoluteX="147dp"
+        tools:layout_editor_absoluteX="138dp"
         tools:layout_editor_absoluteY="0dp" />
 
 </android.support.constraint.ConstraintLayout>
