--- a/app/src/main/res/layout/popup_submission.xml
+++ b/app/src/main/res/layout/popup_submission.xml
@@ -71,7 +71,7 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.9"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="414dp" />
+            tools:layout_editor_absoluteY="405dp" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline10"
@@ -128,7 +128,7 @@
 
         <TextView
             android:id="@+id/submissionSubmitterRank"
-            android:layout_width="164dp"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Rank Here"
             app:layout_constraintLeft_toLeftOf="@+id/submissionSubmitterName"
@@ -194,7 +194,8 @@
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toTopOf="@+id/guideline7"
             app:layout_constraintRight_toLeftOf="@+id/submissionReportButton"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            style="@style/TextViewTitleMedium"/>
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline25"
