--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -23,11 +23,10 @@
             android:ems="10"
             android:hint="Choose a username"
             android:inputType="textPersonName"
-            app:layout_constraintBottom_toTopOf="@+id/guideline17"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline18"
-            />
+            android:layout_marginTop="16dp" />
 
         <ImageView
             android:id="@+id/newUserDefaultImageView"
@@ -63,7 +62,7 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline17"
-            android:layout_width="360dp"
+            android:layout_width="384dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.9"
@@ -72,30 +71,30 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline18"
-            android:layout_width="360dp"
-            android:layout_height="wrap_content"
+            android:layout_width="384dp"
+            android:layout_height="0dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.8"
+            app:layout_constraintGuide_percent="0.7078125"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="512dp" />
+            tools:layout_editor_absoluteY="453dp" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline19"
-            android:layout_width="360dp"
+            android:layout_width="384dp"
             android:layout_height="0dp"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.56875"
+            app:layout_constraintGuide_percent="0.5"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="364dp" />
+            tools:layout_editor_absoluteY="320dp" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline20"
-            android:layout_width="360dp"
+            android:layout_width="384dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.3359375"
+            app:layout_constraintGuide_percent="0.30625"
             tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="215dp" />
+            tools:layout_editor_absoluteY="196dp" />
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline21"
@@ -103,7 +102,7 @@
             android:layout_height="640dp"
             android:orientation="vertical"
             app:layout_constraintGuide_percent="0.5"
-            tools:layout_editor_absoluteX="180dp"
+            tools:layout_editor_absoluteX="192dp"
             tools:layout_editor_absoluteY="0dp" />
 
         <RadioGroup
@@ -136,7 +135,7 @@
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline22"
-            android:layout_width="360dp"
+            android:layout_width="384dp"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.1046875"
@@ -210,7 +209,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/guideline17"
-            style="@style/BottomActionBar">
+            style="@style/BottomActionBar"
+            android:id="@+id/relativeLayout2">
 
             <ImageButton
                 android:id="@+id/newUserConfirmButton"
@@ -226,5 +226,19 @@
                 app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/luke_tick"/>
         </RelativeLayout>
+
+        <CheckBox
+            android:text="I am 18 years or older"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/age_check"
+            android:layout_marginEnd="16dp"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginStart="16dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/newUserName"
+            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
+            android:layout_marginBottom="8dp" />
     </android.support.constraint.ConstraintLayout>
 </android.support.design.widget.CoordinatorLayout>
